# authbox

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
crates/authbox/: Cargo.toml
crates/authbox-argon2/: Cargo.toml
crates/authbox-argon2/src/: lib.rs  password_hasher.rs  prelude.rs
crates/authbox-core/: Cargo.toml
crates/authbox-core/src/: lib.rs  prelude.rs
crates/authbox-core/src/configs/: mod.rs  service_builder.rs
crates/authbox-core/src/services/: auth.rs  mod.rs
crates/authbox-core/src/traits/: blacklist_token.rs  jwt_manager.rs  one_time_token_store.rs  password_hasher.rs  user_store.rs
crates/authbox-email/: Cargo.toml
crates/authbox-email/src/: lib.rs  prelude.rs  resend.rs  sendgrid.rs  smtp.rs
crates/authbox-jwt/: Cargo.toml
crates/authbox-jwt/src/: errors.rs  jwt.rs  lib.rs  models.rs  prelude.rs
crates/authbox-redis/: Cargo.toml
crates/authbox-redis/src/: blacklist_store.rs  lib.rs  ott_store.rs  prelude.rs
crates/authbox/src/: prelude.rs
crates/authbox/tests/: auth_flow.rs  email_and_password_reset.rs
crates/authbox/tests/common/: mod.rs
examples/actix_web/: .env-sample  Cargo.toml  README.md
examples/actix_web/src/: auth_middleware.rs  common.rs  email_providers.rs  lib.rs  models.rs  routes.rs
examples/actix_web/src/handlers/: forgot_password.rs  index.rs  login.rs  logout.rs  me.rs  mod.rs  refresh_token.rs  register.rs  reset_password.rs  verify_email.rs
src/: errors.rs  lib.rs  prelude.rs
src/configs/: service_builder.rs
src/services/: auth.rs  jwt.rs  mod.rs  password.rs
src/traits/: auth_user.rs  email.rs  mod.rs  register_user.rs  token_manager.rs  user_store.rs
tests/: auth_flow.rs  auth_test.rs  email_and_password_reset.rs
tests/common/: mod.rs
