[package]
name = "authbox"
version = "0.1.0"
edition = "2024"

description = "Modern Rust authentication for Actix-Web"
license = "MIT"

repository = "https://github.com/anomalous254/authbox"
homepage = "https://github.com/anomalous254/authbox"
documentation = "https://docs.rs/authbox"

readme = "README.md"

keywords = ["authentication", "jwt", "actix", "security", "auth"]

categories = ["authentication", "web-programming"]

authors = ["anomalous254"]


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
argon2 = "0.5.3"
actix-web = "4.13.0"
actix-files = "0.6.10"
jsonwebtoken = "10.3.0"
actix-web-httpauth = "0.8.2"


[lib]
name = "authbox"
path = "src/lib.rs"
