[package]
name = "authbox-argon2"
version = "0.1.0"
edition = "2024"
description = "Argon2 password hashing for AuthBox"
license = "Apache-2.0"
repository = "https://github.com/anomalous254/authbox"
readme = "../../README.md"
authors = ["anomalous254"]

[dependencies]
authbox-core = { path = "../authbox-core" }
argon2 = {version = "0.5.3",  features=["password-hash"]}
rand_core = { version="0.6", features=["getrandom"]}

