[package]
name = "authbox-email"
version = "1.1.2"
edition = "2024"
description = "Email provider implementations for AuthBox"
license = "Apache-2.0"
repository = "https://github.com/anomalous254/authbox"
readme = "../../README.md"
authors = ["anomalous254"]

[features]
default = []

resend = []
sendgrid = []
smtp = ["dep:lettre"]

[dependencies]
authbox-core = "1.1.2"
async-trait = "0.1.89"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
lettre = { version = "0.11", optional = true }
