[package]
name = "authbox-jwt"
version = "0.1.0"
edition = "2024"
description = "JWT implementation for AuthBox"
license = "Apache-2.0"
repository = "https://github.com/anomalous254/authbox"
readme = "../../README.md"
authors = ["anomalous254"]

[dependencies]
authbox-core = "1.0.0"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
serde = { version = "1", features = ["derive"] }
uuid = {version="1.23.1", features=["v4"]}
async-trait = "0.1.89"
chrono = "0.4.44"
