[package]
name = "authbox"
version = "1.0.1"
edition = "2024"
description = "A lightweight, modular authentication framework for Rust built around traits, async support, and pluggable component"
license = "Apache-2.0"
repository = "https://github.com/anomalous254/authbox"
homepage = "https://github.com/anomalous254/authbox"
documentation = "https://docs.rs/authbox"
readme = "../../README.md"
keywords = ["authentication", "jwt", "actix", "security", "auth"]
categories = ["authentication", "web-programming"]
authors = ["anomalous254"]

[dependencies]
authbox-core = "1.0.1"
authbox-jwt = "1.0.1"
authbox-argon2 = "1.0.1"
async-trait = "0.1.89"
tokio = { version = "1", features = ["full"] }
