[package]
name = "actix_web_test"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
authbox = {version = "1.1.3", features=["email-resend", "email-smtp", "email-sendgrid"]}
async-trait = "0.1.89"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
tokio = "1.52.3"
uuid = {version="1.23.1", features=["v4"]}
redis = { version = "1.2.2", features = ["tokio-comp"] }
dotenvy = "0.15.7"


[lib]
name = "actix_web_test"
path = "src/lib.rs"

[[bin]]
name = "actix_web_test"
path = "src/bin/main.rs"
